2002-07-25  Chris Blumenberg  <cblu@apple.com>

	Renamed elementInfoAtPoint to elementAtPoint

        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDefaultContextMenuHandler.h:
        * WebView.subproj/WebDefaultContextMenuHandler.m:
        (+[WebDefaultContextMenuHandler addMenuItemWithTitle:action:target:toArray:]): renamed
        (-[WebDefaultContextMenuHandler contextMenuItemsForElement:defaultMenuItems:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView menuForEvent:]):
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _elementAtPoint:]):

2002-07-24  Chris Blumenberg  <cblu@apple.com>

	tiny change

        * WebView.subproj/WebDefaultContextMenuHandler.m:

2002-07-24  Chris Blumenberg  <cblu@apple.com>

	Added implmentations for a few context menu items.

        * WebView.subproj/WebController.h:
        * WebView.subproj/WebDefaultContextMenuHandler.h:
        * WebView.subproj/WebDefaultContextMenuHandler.m:
        (-[WebDefaultContextMenuHandler dealloc]):
        (-[WebDefaultContextMenuHandler contextMenuItemsForElement:defaultMenuItems:]):
        (-[WebDefaultContextMenuHandler validateUserInterfaceItem:]):
        (-[WebDefaultContextMenuHandler openNewWindowWithURL:]):
        (-[WebDefaultContextMenuHandler openLinkInNewWindow:]):
        (-[WebDefaultContextMenuHandler copyLinkToClipboard:]):
        (-[WebDefaultContextMenuHandler openImageInNewWindow:]):
        (-[WebDefaultContextMenuHandler copyImageToClipboard:]):
        (-[WebDefaultContextMenuHandler reloadImage:]):
        (-[WebDefaultContextMenuHandler openFrameInNewWindow:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView menuForEvent:]):

2002-07-24  Richard Williamson (Local)  <rjw@apple.com>

        Removed vestigal locationChangeHandler ivar.
        
        * WebView.subproj/WebDataSourcePrivate.h:
        * WebView.subproj/WebDataSourcePrivate.m: